Add tests for FavoriteController