@@ -4,9 +4,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.hexlet.dto.AddToFavoritesRequestDTO;
 import io.hexlet.dto.FavoriteDTO;
-import io.hexlet.dto.RegistrationDTO;
-import io.hexlet.repository.FavoriteRepository;
-import io.hexlet.repository.UserRepository;
+import io.hexlet.utils.TestAuthUtils;
 import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,8 +16,11 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.List;
 
+import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -30,10 +31,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @Transactional
 public class FavoriteControllerTest {
 
-    private static final String REGISTRATION_PATH = "/api/auth/registration";
-    private static final String LOGIN_PATH = "/api/auth/login";
     private static final String BASE_API_PATH = "/api/data";
     private static final String FAVORITE_PATH = BASE_API_PATH + "/favorites";
+    private static final String FAVORITE_BY_ID_PATH = FAVORITE_PATH + "/";
 
     @Autowired
     private MockMvc mockMvc;
@@ -45,49 +45,103 @@ public class FavoriteControllerTest {
 
     @BeforeEach
     public void setUp() throws Exception {
-        RegistrationDTO dto = new RegistrationDTO();
-        dto.setPhone("79001234567");
-        dto.setPassword("password");
-
-        mockMvc.perform(post(REGISTRATION_PATH)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andExpect(status().isOk());
-
-        var result = mockMvc.perform(post(LOGIN_PATH)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andExpect(status().isOk())
-                .andReturn();
-
-        jwtToken = result.getResponse().getContentAsString();
+        this.jwtToken = TestAuthUtils.getJwtToken(mockMvc, objectMapper);
     }
 
-    @Test
-    public void testAddToFavorites() throws Exception {
+    private AddToFavoritesRequestDTO createFavoriteRequest(int productId) {
         AddToFavoritesRequestDTO request = new AddToFavoritesRequestDTO();
-        request.setProductId(1);
+        request.setProductId(productId);
+        return request;
+    }
 
+    private void addToFavorites(AddToFavoritesRequestDTO request) throws Exception {
         mockMvc.perform(post(FAVORITE_PATH)
                         .header("Authorization", "Bearer " + jwtToken)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isCreated());
+    }
 
-        var result = mockMvc.perform(get(FAVORITE_PATH)
+    private String performGetFavorites() throws Exception {
+        return mockMvc.perform(get(FAVORITE_PATH)
                         .header("Authorization", "Bearer " + jwtToken))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andReturn();
+                .andReturn()
+                .getResponse()
+                .getContentAsString();
+    }
 
-        String responseBody = result.getResponse().getContentAsString();
+    @Test
+    public void testIndex() throws Exception {
+        addToFavorites(createFavoriteRequest(1));
+        addToFavorites(createFavoriteRequest(2));
+        addToFavorites(createFavoriteRequest(3));
+
+        var body = performGetFavorites();
+
+        assertThatJson(body).isArray().hasSize(3);
+    }
+
+    @Test
+    public void testAddToFavorites() throws Exception {
+        addToFavorites(createFavoriteRequest(1));
+        addToFavorites(createFavoriteRequest(2));
+        addToFavorites(createFavoriteRequest(3));
+
+
+        String body = performGetFavorites();
         List<FavoriteDTO> favorites = objectMapper.readValue(
-                responseBody,
+                body,
                 new TypeReference<List<FavoriteDTO>>() {
                 });
 
         assertFalse(favorites.isEmpty());
-        assertEquals(1, favorites.getFirst().getProductId());
+        assertEquals(1, favorites.get(0).getProductId());
+        assertEquals(2, favorites.get(1).getProductId());
+        assertEquals(3, favorites.get(2).getProductId());
     }
 
+    @Test
+    public void testDeleteById() throws Exception {
+        addToFavorites(createFavoriteRequest(1));
+        addToFavorites(createFavoriteRequest(2));
+        addToFavorites(createFavoriteRequest(3));
+
+        int id = 2;
+
+        mockMvc.perform(delete(FAVORITE_BY_ID_PATH + id)
+                        .header("Authorization", "Bearer " + jwtToken))
+                .andExpect(status().isNoContent());
+
+        var body = performGetFavorites();
+        List<FavoriteDTO> favorites = objectMapper.readValue(
+                body,
+                new TypeReference<List<FavoriteDTO>>() {
+                });
+
+        assertEquals(2, favorites.size());
+        assertTrue(favorites.stream().noneMatch(favorite -> favorite.getId() == id));
+        assertEquals(1, favorites.get(0).getProductId());
+        assertEquals(3, favorites.get(1).getProductId());
+    }
+
+    @Test
+    public void testDeleteByIdNotFound() throws Exception {
+        addToFavorites(createFavoriteRequest(1));
+
+        int id = 999;
+
+        mockMvc.perform(delete(FAVORITE_BY_ID_PATH + id)
+                        .header("Authorization", "Bearer " + jwtToken))
+                .andExpect(status().isNotFound());
+
+        var body = performGetFavorites();
+        List<FavoriteDTO> favorites = objectMapper.readValue(
+                body,
+                new TypeReference<List<FavoriteDTO>>() {
+                });
+
+        assertEquals(1, favorites.size());
+    }
 }
